--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:123@localhost:5432/ecomtest?schema=public"
+DATABASE_URL="postgresql://postgres:123@localhost:5432/lms?schema=public"
+SECRET=asdfasdfakijdapsjfajfiasklfjasdf
 
