--- a/package.json
+++ b/package.json
@@ -9,30 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.2.1",
-    "@tanstack/react-query": "^4.2.3",
-    "argon2": "^0.29.1",
+    "@headlessui/react": "^1.7.4",
+    "@headlessui/tailwindcss": "^0.1.1",
+    "@hookform/resolvers": "^2.9.10",
+    "@prisma/client": "^4.5.0",
+    "@tanstack/react-query": "^4.14.3",
+    "argon2": "^0.30.1",
+    "axios": "^1.1.3",
     "cookie": "^0.5.0",
+    "csstype": "^3.1.1",
+    "daisyui": "^2.38.0",
+    "dayjs": "^1.11.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "next": "12.2.5",
+    "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.34.2"
+    "react-hook-form": "^7.39.1",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.6.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/lodash": "^4.14.184",
-    "@types/node": "18.7.13",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.16",
-    "prisma": "^4.2.1",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.8.2"
+    "@types/lodash": "^4.14.188",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.2",
+    "postcss": "^8.4.18",
+    "prisma": "^4.5.0",
+    "tailwindcss": "^3.2.1",
+    "typescript": "4.8.4"
   }
 }
